<resources>
    <string name="app_name">My Running</string>
    <string name="normal_map">Mapa Normal</string>
    <string name="hybrid_map">Mapa Híbrido</string>
    <string name="satellite_map">Mapa de Satélite</string>
    <string name="terrain_map">Mapa de Terreno</string>
    <string name="lat_long_snippet">Latitude: %1$.5f, Longitude: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
    <string name="seu_nome">Seu nome</string>
    <string name="peso">Peso:</string>
    <string name="altura">Altura:</string>
    <string name="idade">Idade:</string>
    <string name="enviar">Enviar</string>
</resources>