<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User">


    <EditText
        android:id="@+id/nameEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/seu_nome"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/Peso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/peso"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/nameEdit"
        app:layout_constraintStart_toStartOf="@id/nameEdit"/>

    <TextView
        android:id="@+id/Altura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/altura"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/Peso"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/Peso"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/Idade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idade"
        app:layout_constraintStart_toStartOf="@id/Peso"
        app:layout_constraintTop_toBottomOf="@id/Altura"
        android:layout_marginTop="20dp"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/weight_user"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:inputType="number"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/nameEdit"
        app:layout_constraintStart_toEndOf="@id/Peso"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/height_user"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/weight_user"
        app:layout_constraintStart_toStartOf="@id/weight_user"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/age_user"
        android:layout_width="25dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/height_user"
        app:layout_constraintStart_toStartOf="@id/weight_user"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enviar"
        app:layout_constraintStart_toStartOf="@id/nameEdit"
        app:layout_constraintEnd_toEndOf="@id/nameEdit"
        app:layout_constraintTop_toBottomOf="@id/age_user"
        android:layout_marginTop="30dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>